@@ -1,13 +1,15 @@
 package edu.sdccd.cisc191.model;
 
 public class Course {
-    private int id;
-    private String title;
-    private int studentId;
+    /// made variables final
+    private final int id;
+    private final String title;
+    private final int studentId;
 
     public Course(int id, String title, int studentId) {
         if (id <= 0) throw new IllegalArgumentException("ID must be greater than 0.");
-        if (title == null || title.isBlank()) throw new IllegalArgumentException("Title must not be null or blank.");
+        /// changed from .isBlank() to .trim().isEmpty() to improve validation
+        if (title == null || title.trim().isEmpty()) throw new IllegalArgumentException("Title must not be null or blank.");
         if (studentId <= 0) throw new IllegalArgumentException("Student ID must be greater than 0.");
         this.id = id;
         this.title = title;
